# CodeBlocks

src/plugins/contrib/clangd_client/src/codecompletion/: LSPEventCallbackHandler.h
src/plugins/contrib/dragscroll/: DragScroll_Windows.cbp  DragScroll_wx30-unix.cbp  DragScroll_wx32-unix.cbp  DragScroll_wx32.cbp  DragScroll_wx32_64.cbp  DragScroll_wx33.cbp  DragScroll_wx33_64.cbp  Makefile.am
src/plugins/contrib/dragscroll/src/: dragscroll.cpp  dragscroll.h  dragscrollevent.cpp  dragscrollevent.h  linux_functions.cpp
src/plugins/contrib/wxSmith/: wxsresourcetree.cpp  wxsresourcetree.h
src/src/: app.cpp
